Added JS for add to cart, there will be message pop up saying add to cart when the add to cart button is clicked, and also added JS for Cart Badge update, whenever add to cart is clicked, the cart increased its quantity

--- a/HTML-CATEGORIES/accessories.html
+++ b/HTML-CATEGORIES/accessories.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">12inches x 10meters Plastic Wrap</figcaption>
         <p class="price">₱239.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">12inches x 10meters Aluminum Foil</figcaption>
         <p class="price">₱310.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">Aluminum Paper Towel with Holder</figcaption>
         <p class="price">₱179.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">9inches Single Knitted Trivet</figcaption>
         <p class="price">₱110.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
         <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">Plain Black Apron with Pocket</figcaption>
         <p class="price">₱174.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">Transparent Vacuum Sealer Rolls</figcaption>
         <p class="price">₱275.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
 
@@ -126,7 +126,7 @@
         </figure>
         <figcaption class="productCaption">Fruit-Patterned Table Cloth 60inches x 90inches</figcaption>
         <p class="price">₱190.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -135,7 +135,7 @@
         </figure>
         <figcaption class="productCaption">Colorful Fruit and Vegetable Dishcloths</figcaption>
         <p class="price">₱358.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -144,7 +144,7 @@
         </figure>
         <figcaption class="productCaption">Fruit-Themed Square Coasters</figcaption>
         <p class="price">₱295.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -153,7 +153,7 @@
         </figure>
         <figcaption class="productCaption">Industrial Napkin Holder with Clip</figcaption>
         <p class="price">₱95.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -162,7 +162,7 @@
         </figure>
         <figcaption class="productCaption">White Fruit-Patterned Oven Mitt</figcaption>
         <p class="price">₱187.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -171,7 +171,7 @@
         </figure>
         <figcaption class="productCaption">Fruit-Patterned Square Pot Holder</figcaption>
         <p class="price">₱104.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -180,7 +180,7 @@
         </figure>
         <figcaption class="productCaption">Shades of Brown Pot Protectors</figcaption>
         <p class="price">₱422.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -189,7 +189,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Splatter Screen</figcaption>
         <p class="price">₱139.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -198,7 +198,7 @@
         </figure>
         <figcaption class="productCaption">Compact two-stage Knife Sharpener</figcaption>
         <p class="price">₱597.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -207,7 +207,7 @@
         </figure>
         <figcaption class="productCaption">Blue-colored Seafood Shears</figcaption>
         <p class="price">₱139.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div> 
 </div>
 
