--- a/HTML-CATEGORIES/cookwares.html
+++ b/HTML-CATEGORIES/cookwares.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">Classic Steel Wok with Bamboo Grip</figcaption>
         <p class="price">₱1,299.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">Classic Carbon Steel Wok with Wooden Handle</figcaption>
         <p class="price">₱775.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">Modern Style Shiny Frying Pan</figcaption>
         <p class="price">₱468.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
 
@@ -99,7 +99,7 @@
         </figure>
         <figcaption class="productCaption">Classic Style Cast Iron Skillet</figcaption>
         <p class="price">₱495.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -108,7 +108,7 @@
         </figure>
         <figcaption class="productCaption">11inches Elegant Frying Pan</figcaption>
         <p class="price">₱480.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -117,7 +117,7 @@
         </figure>
         <figcaption class="productCaption">11inches Carbon Steel Frying Pan</figcaption>
         <p class="price">₱425.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -126,7 +126,7 @@
         </figure>
         <figcaption class="productCaption">8inches Black Frying Pan with Wooden Handle</figcaption>
         <p class="price">₱405.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -135,7 +135,7 @@
         </figure>
         <figcaption class="productCaption">8inches Round Cast Iron Skillet</figcaption>
         <p class="price">₱439.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -152,7 +152,7 @@
         </figure>
         <figcaption class="productCaption">Orange Grill Pan</figcaption>
         <p class="price">₱597.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +161,7 @@
         </figure>
         <figcaption class="productCaption">Blue Enamel Grill Pan</figcaption>
         <p class="price">₱599.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +170,7 @@
         </figure>
         <figcaption class="productCaption">Non Stick Grill Pan</figcaption>
         <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
 
@@ -180,7 +180,7 @@
         </figure>
         <figcaption class="productCaption">Deep Square Grill Pan</figcaption>
         <p class="price">₱559.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -189,7 +189,7 @@
         </figure>
         <figcaption class="productCaption">Mini Panini Pan with Press</figcaption>
         <p class="price">₱630.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -198,7 +198,7 @@
         </figure>
         <figcaption class="productCaption">11in. Square Griddle Pan</figcaption>
         <p class="price">₱489.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -207,7 +207,7 @@
         </figure>
         <figcaption class="productCaption">11in. BBQ Grill Pan</figcaption>
         <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -216,7 +216,7 @@
         </figure>
         <figcaption class="productCaption">12inches Square Grill Pan</figcaption>
         <p class="price">₱499.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -232,7 +232,7 @@
         </figure>
         <figcaption class="productCaption">6.25Qt. Stainless Steel Round Stockpot with Lid</figcaption>
         <p class="price">₱890.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -241,7 +241,7 @@
         </figure>
         <figcaption class="productCaption">12cup Modern Stainless Steel Saucepan</figcaption>
         <p class="price">₱785.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -250,7 +250,7 @@
         </figure>
         <figcaption class="productCaption">0.7Qt. Mini Stockpot with Glass Lid</figcaption>
         <p class="price">₱930.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
 
@@ -260,7 +260,7 @@
         </figure>
         <figcaption class="productCaption">8Qt. Stainless Steel 3-Ply Base Stockpt with Lid</figcaption>
         <p class="price">₱799.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -269,7 +269,7 @@
         </figure>
         <figcaption class="productCaption">8.3Qt. Stainless Steel Deep Stockpot</figcaption>
         <p class="price">₱710.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -278,7 +278,7 @@
         </figure>
         <figcaption class="productCaption">8Qt. Stainless Steel Stockpot</figcaption>
         <p class="price">₱649.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -287,7 +287,7 @@
         </figure>
         <figcaption class="productCaption">7.5Qt. Deep Round Stockpot & Colander Insert</figcaption>
         <p class="price">₱1,245.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -296,7 +296,7 @@
         </figure>
         <figcaption class="productCaption">7Qt Stainless Steel Stockpot with Lid</figcaption>
         <p class="price">₱846.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
