--- a/HTML-CATEGORIES/glasswares.html
+++ b/HTML-CATEGORIES/glasswares.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">Classic Short Stem Wine Glass</figcaption>
         <p class="price">₱129.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">Classic Long Stem Wine Glass</figcaption>
         <p class="price">₱115.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Ribbed Flute Wine Glass</figcaption>
         <p class="price">₱128.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Ribbed Style Wine Glass</figcaption>
         <p class="price">₱145.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">Opal Curve Classic Wine Glass</figcaption>
         <p class="price">₱136.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">Classic Haven Table Wine Glass</figcaption>
         <p class="price">₱120.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">New Moon Design Wine Glass</figcaption>
         <p class="price">₱149.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">Champagne Flute Wine Glass</figcaption>
         <p class="price">₱152.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -143,7 +143,7 @@
         </figure>
         <figcaption class="productCaption">Modern Style Crystal Wine Glass</figcaption>
         <p class="price">₱179.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +152,7 @@
         </figure>
         <figcaption class="productCaption">Modern Style Bloom Wine Glass</figcaption>
         <p class="price">₱134.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -168,7 +168,7 @@
         </figure>
         <figcaption class="productCaption">Soft Floral Ceramic Mug</figcaption>
         <p class="price">₱85.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -177,7 +177,7 @@
         </figure>
         <figcaption class="productCaption">Blush Pink Ceramic Mug</figcaption>
         <p class="price">₱77.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -186,7 +186,7 @@
         </figure>
         <figcaption class="productCaption">Puppy Print Mug</figcaption>
         <p class="price">₱72.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -195,7 +195,7 @@
         </figure>
         <figcaption class="productCaption">Rainbow Ceramic Mug</figcaption>
         <p class="price">₱65.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -204,7 +204,7 @@
         </figure>
         <figcaption class="productCaption">Geometric Pattern Mug</figcaption>
         <p class="price">₱70.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -213,7 +213,7 @@
         </figure>
         <figcaption class="productCaption">Soft Botanical Mug</figcaption>
         <p class="price">₱59.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -222,7 +222,7 @@
         </figure>
         <figcaption class="productCaption">Warm Abstract Heart Mug</figcaption>
         <p class="price">₱63.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -231,7 +231,7 @@
         </figure>
         <figcaption class="productCaption">Leaf Texture Mug</figcaption>
         <p class="price">₱70.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -240,7 +240,7 @@
         </figure>
         <figcaption class="productCaption">Earthy Rainbow Mug</figcaption>
         <p class="price">₱62.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -249,7 +249,7 @@
         </figure>
         <figcaption class="productCaption">Golden Wave Accent Mug</figcaption>
         <p class="price">₱65.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -266,7 +266,7 @@
         </figure>
         <figcaption class="productCaption">12oz Ribbed Style Drinking Glass</figcaption>
         <p class="price">₱47.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -275,7 +275,7 @@
         </figure>
         <figcaption class="productCaption">13.25oz. Dimpled Drinking Glass</figcaption>
         <p class="price">₱59.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -284,7 +284,7 @@
         </figure>
         <figcaption class="productCaption">15oz. Classic Style Drinking Glass</figcaption>
         <p class="price">₱40.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -293,7 +293,7 @@
         </figure>
         <figcaption class="productCaption">16.25oz. Faceted Highball Drinking Glass</figcaption>
         <p class="price">₱74.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -302,7 +302,7 @@
         </figure>
         <figcaption class="productCaption">14.25oz. Crystal Cut Drinking Glass</figcaption>
         <p class="price">₱66.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -311,7 +311,7 @@
         </figure>
         <figcaption class="productCaption">13oz. Round Clear Drinking Glass</figcaption>
         <p class="price">₱57.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -320,7 +320,7 @@
         </figure>
         <figcaption class="productCaption">14.5oz. Plain High RseDrinking Glass</figcaption>
         <p class="price">₱60.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -329,7 +329,7 @@
         </figure>
         <figcaption class="productCaption">13oz. Classic Clear Drinking Glass</figcaption>
         <p class="price">₱58.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
