--- a/HTML-CATEGORIES/kitchenappliances.html
+++ b/HTML-CATEGORIES/kitchenappliances.html
@@ -70,7 +70,7 @@
         </figure>
         <figcaption class="productCaption">Five-Speed Stainless Ultra Blender</figcaption>
         <p class="price">₱1,740.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -79,7 +79,7 @@
         </figure>
         <figcaption class="productCaption">Compact Blender with one To-Go Bottle</figcaption>
         <p class="price">₱1,099.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -88,7 +88,7 @@
         </figure>
         <figcaption class="productCaption">Black Two-Speed Personal Blender</figcaption>
         <p class="price">₱935.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -97,7 +97,7 @@
         </figure>
         <figcaption class="productCaption">Hand Blender with Accessories</figcaption>
         <p class="price">₱1,035.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -106,7 +106,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Immersion Blender</figcaption>
         <p class="price">₱679.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -115,7 +115,7 @@
         </figure>
         <figcaption class="productCaption">Modern Style Silver Elite Juicer</figcaption>
         <p class="price">₱1,835.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -124,7 +124,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Modern Juicer</figcaption>
         <p class="price">₱2,300.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -133,7 +133,7 @@
         </figure>
         <figcaption class="productCaption">Trending Manual Citrus Juicer</figcaption>
         <p class="price">₱855.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -142,7 +142,7 @@
         </figure>
         <figcaption class="productCaption">Single Black Modern Soda Maker</figcaption>
         <p class="price">₱995.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +151,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Food Processor and Accessories</figcaption>
         <p class="price">₱2,939.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +160,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Meat Grinder and Accessories</figcaption>
         <p class="price">₱3,495.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +169,7 @@
         </figure>
         <figcaption class="productCaption">Fully Automatic Espresso Machine</figcaption>
         <p class="price">₱2,905.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +178,7 @@
         </figure>
         <figcaption class="productCaption">Manual Espresso Coffee Machine</figcaption>
         <p class="price">₱2,160.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +187,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Stainless Steel Electric Kettle</figcaption>
         <p class="price">₱1,569.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +196,7 @@
         </figure>
         <figcaption class="productCaption">Classic Stainless Steel Electric Kettle</figcaption>
         <p class="price">₱1,499.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +205,7 @@
         </figure>
         <figcaption class="productCaption">Durable Classic Black Milk Frother</figcaption>
         <p class="price">₱1,570.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
 </div>
