--- a/HTML-CATEGORIES/knives.html
+++ b/HTML-CATEGORIES/knives.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">12pcs Kitchen Knife Block Set</figcaption>
         <p class="price">₱2,455.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">6pcs Elegant Kitchen Knife Set</figcaption>
         <p class="price">₱1,100.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">5pcs Knife Block Set with Wood Handle</figcaption>
         <p class="price">₱1,499.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">6pcs Stainless Steel Knife Roll Set</figcaption>
         <p class="price">₱1,359.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">5pcs Stainless Steel Knives with Magnetic Holder</figcaption>
         <p class="price">₱1,560.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">4pcs Kitchen Knife Block Set</figcaption>
         <p class="price">₱1,780.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">7pcs Chef's Choice Knife Set</figcaption>
         <p class="price">₱2,370.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">5pcs Floral Handle Knives with Magnetic Holder</figcaption>
         <p class="price">₱1,945.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -151,7 +151,7 @@
         </figure>
         <figcaption class="productCaption">10inches Commercial Bread Knife</figcaption>
         <p class="price">₱239.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +160,7 @@
         </figure>
         <figcaption class="productCaption">9inches Modern Offset Bread Knife</figcaption>
         <p class="price">₱320.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +169,7 @@
         </figure>
         <figcaption class="productCaption">8inches Bread Knife with Sheath</figcaption>
         <p class="price">₱399.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +178,7 @@
         </figure>
         <figcaption class="productCaption">10inches Confectioner's Knife</figcaption>
         <p class="price">₱305.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +187,7 @@
         </figure>
         <figcaption class="productCaption">10inches Curved Bread Knife</figcaption>
         <p class="price">₱299.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +196,7 @@
         </figure>
         <figcaption class="productCaption">10inches Classic Wide Bread Knife</figcaption>
         <p class="price">₱420.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +205,7 @@
         </figure>
         <figcaption class="productCaption">9inches Curved Bread Knife</figcaption>
         <p class="price">₱365.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -214,7 +214,7 @@
         </figure>
         <figcaption class="productCaption">8inches Professional Bread Knife</figcaption>
         <p class="price">₱390.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -230,7 +230,7 @@
         </figure>
         <figcaption class="productCaption">3.5inches Paring Knife with Black Handle</figcaption>
         <p class="price">₱310.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -239,7 +239,7 @@
         </figure>
         <figcaption class="productCaption">3.5inches White Paring Knife</figcaption>
         <p class="price">₱355.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -248,7 +248,7 @@
         </figure>
         <figcaption class="productCaption">3inches Vegetable Paring Knife</figcaption>
         <p class="price">₱305.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -257,7 +257,7 @@
         </figure>
         <figcaption class="productCaption">4inches Stainless Steel Paring Knife</figcaption>
         <p class="price">₱290.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -266,7 +266,7 @@
         </figure>
         <figcaption class="productCaption">4inches Paring Knife with Wooden Handle</figcaption>
         <p class="price">₱265.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -275,7 +275,7 @@
         </figure>
         <figcaption class="productCaption">4inches Vegetable Knife with Wood Handle</figcaption>
         <p class="price">₱248.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -284,7 +284,7 @@
         </figure>
         <figcaption class="productCaption">3inches Serrated Paring Knife</figcaption>
         <p class="price">₱277.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -293,7 +293,7 @@
         </figure>
         <figcaption class="productCaption">3.5inches Green Paring Knife with Sheath</figcaption>
         <p class="price">₱458.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -309,7 +309,7 @@
         </figure>
         <figcaption class="productCaption">9inches Stainless Steel Utility Knife</figcaption>
         <p class="price">₱360.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -318,7 +318,7 @@
         </figure>
         <figcaption class="productCaption">8inches Classic Utility Knife</figcaption>
         <p class="price">₱320.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -327,7 +327,7 @@
         </figure>
         <figcaption class="productCaption">6inches Modern Utility Knife</figcaption>
         <p class="price">₱304.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -336,7 +336,7 @@
         </figure>
         <figcaption class="productCaption">5inches White Serrated Utility Knife</figcaption>
         <p class="price">₱480.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -345,7 +345,7 @@
         </figure>
         <figcaption class="productCaption">7inches Stainless Steel Asian Utility Knife</figcaption>
         <p class="price">₱670.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -354,7 +354,7 @@
         </figure>
         <figcaption class="productCaption">6.5inches Master Utility Knife</figcaption>
         <p class="price">₱295.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -363,7 +363,7 @@
         </figure>
         <figcaption class="productCaption">5inches Stainless Steel Utility Knife</figcaption>
         <p class="price">₱259.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -372,7 +372,7 @@
         </figure>
         <figcaption class="productCaption">6inches Serrated Utility Knife</figcaption>
         <p class="price">₱330.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
