--- a/HTML-CATEGORIES/utensils.html
+++ b/HTML-CATEGORIES/utensils.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">3pcs Starter Kitchen Tool Set</figcaption>
         <p class="price">₱435.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">5pcs Stainless Steel Kitchen Tool Set</figcaption>
         <p class="price">₱699.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">Set of 4 Black Kitchen Utensils</figcaption>
         <p class="price">₱498.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">3pcs  Stainless Steel Grilling Set</figcaption>
         <p class="price">₱410.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">Set of 5 NonStick Utensil Set</figcaption>
         <p class="price">₱615.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">Classic Essential Kitchen Tool Set of 4</figcaption>
         <p class="price">₱679.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">8pcs Stainless Steel Utensil Set</figcaption>
         <p class="price">₱790.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">Gray Utensil Crock with Silicone Tools</figcaption>
         <p class="price">₱499.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -151,7 +151,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Stainless Steel Flatware Set</figcaption>
         <p class="price">₱365.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +160,7 @@
         </figure>
         <figcaption class="productCaption">Set of 5 Stainless Steel Flatware Set</figcaption>
         <p class="price">₱415.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +169,7 @@
         </figure>
         <figcaption class="productCaption">Classic Sleek Flatware Set</figcaption>
         <p class="price">₱320.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +178,7 @@
         </figure>
         <figcaption class="productCaption">5pcs Modern Flatware Set</figcaption>
         <p class="price">₱309.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +187,7 @@
         </figure>
         <figcaption class="productCaption">9pcs  Stainless Steel Elegant Flatware Set</figcaption>
         <p class="price">₱575.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -196,7 +196,7 @@
         </figure>
         <figcaption class="productCaption">12pcs Polished Flatware Set</figcaption>
         <p class="price">₱795.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -205,7 +205,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Copper Flatware Set</figcaption>
         <p class="price">₱499.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -214,7 +214,7 @@
         </figure>
         <figcaption class="productCaption">Set of 12 Wooden Handled Flatware Set</figcaption>
         <p class="price">₱1,105.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
@@ -232,7 +232,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Fish Turner</figcaption>
         <p class="price">₱278.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -241,7 +241,7 @@
         </figure>
         <figcaption class="productCaption">Black Slotted Spatula</figcaption>
         <p class="price">₱250.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -250,7 +250,7 @@
         </figure>
         <figcaption class="productCaption">Nylon Square Turner</figcaption>
         <p class="price">₱215.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -259,7 +259,7 @@
         </figure>
         <figcaption class="productCaption">Nylon Flexible Turner</figcaption>
         <p class="price">₱220.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -268,7 +268,7 @@
         </figure>
         <figcaption class="productCaption">Cut and Serve Turner</figcaption>
         <p class="price">₱219.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -277,7 +277,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Spatula</figcaption>
         <p class="price">₱299.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -286,7 +286,7 @@
         </figure>
         <figcaption class="productCaption">Cookie Spatula</figcaption>
         <p class="price">₱204.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -295,7 +295,7 @@
         </figure>
         <figcaption class="productCaption">13in. Flexible Turner</figcaption>
         <p class="price">₱249.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
