--- a/HTML-VIEW MORE pages/bundleDeals-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/bundleDeals-P2-viewmore.html
@@ -70,7 +70,7 @@
         </figure>
         <figcaption class="productCaption">HomeBasic Collection with Plate Holder</figcaption>
         <p class="price">₱1,729.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -79,7 +79,7 @@
         </figure>
         <figcaption class="productCaption">Set of 9 Tea Set with Stainless Steel Kettle</figcaption>
         <p class="price">₱1,290.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -88,7 +88,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Table Setting with White Dishware</figcaption>
         <p class="price">₱1,099.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -97,7 +97,7 @@
         </figure>
         <figcaption class="productCaption">13pcs Nonstick Black Cookware Set</figcaption>
         <p class="price">₱2,055.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -106,7 +106,7 @@
         </figure>
         <figcaption class="productCaption">7pcs Ceramic Cookware Combo</figcaption>
         <p class="price">₱1,870.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -115,7 +115,7 @@
         </figure>
         <figcaption class="productCaption">6pcs Nonstick Cookware Set with Chopping Board</figcaption>
         <p class="price">₱1,449.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -124,7 +124,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Cookware Set with Chopping Board</figcaption>
         <p class="price">₱1,270.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -133,7 +133,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Cookware Set</figcaption>
         <p class="price">₱1,320.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -142,7 +142,7 @@
         </figure>
         <figcaption class="productCaption">Polished Stainless Steel Cookware Set</figcaption>
         <p class="price">₱1,495.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +151,7 @@
         </figure>
         <figcaption class="productCaption">Navy Blue Nonstick Cookware Set</figcaption>
         <p class="price">₱990.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
