--- a/HTML-VIEW MORE pages/cookwares-pots-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/cookwares-pots-P2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">8Qt. Nonstick Stockpot with Lid</figcaption>
         <p class="price">₱379.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">4Qt. Non-stick Stockpot with Lid</figcaption>
         <p class="price">₱295.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">8Qt. Non-Stick Stockpot with Lid</figcaption>
         <p class="price">389.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">4Qt. Non-stick Ceramic Stockpot with Lid</figcaption>
         <p class="price">₱399.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">3.8Qt. Petite Enamel On Steel Stockpot</figcaption>
         <p class="price">₱424.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">10Qt. Aluminum Stockpot with Lid</figcaption>
         <p class="price">₱409.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">10Qt. Enamel Stockpot with Knob</figcaption>
         <p class="price">₱785.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">9Qt. Olive-green Steel Stockpot</figcaption>
         <p class="price">₱670.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
