--- a/HTML-VIEW MORE pages/knife-bread-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-bread-P2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">14inches Serrated Edge Cake Slicer</figcaption>
         <p class="price">₱299.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">8inches Serrated Bread Knife</figcaption>
         <p class="price">₱259.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">8.75inches Serrated Bread Knife</figcaption>
         <p class="price">₱280.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">9inches Serrated Bread Knife</figcaption>
         <p class="price">₱209.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">6inches Classic Ceramic Bread Knife</figcaption>
         <p class="price">₱375.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">8.25inches Stainless Steel Bread Knife</figcaption>
         <p class="price">₱305.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">9inches Bread Knife with Wooden Handle</figcaption>
         <p class="price">₱285.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">8.5inches  Stainless Steel Bread Knife</figcaption>
         <p class="price">₱270.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
