--- a/HTML-VIEW MORE pages/knife-paring-p2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-paring-p2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">3-piece Black Starter Knife Set</figcaption>
         <p class="price">₱499.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">3-piece 4in Colorful Non Stick Paring Knife Set</figcaption>
         <p class="price">₱529.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">2-piece Shear and Paring Knife Set</figcaption>
         <p class="price">₱320.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">2-piece Vegetable Knife Set</figcaption>
         <p class="price">₱309.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">3.5inches Paring Knife with Wooden Handle</figcaption>
         <p class="price">₱145.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">2.5inches Bird's Beak Paring Knife</figcaption>
         <p class="price">₱125.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">2.25inches White Peeling Knife</figcaption>
         <p class="price">₱125.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">3.5inches Paring Knife with Sheath</figcaption>
         <p class="price">₱279.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
