--- a/HTML-VIEW MORE pages/knife-utility-p2-viewmore.html
+++ b/HTML-VIEW MORE pages/knife-utility-p2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">3pcs Utility Knife Set</figcaption>
         <p class="price">₱380.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">2pcs Asian Utility Knife Set</figcaption>
         <p class="price">₱320.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">2pcs Veggie Knife Set</figcaption>
         <p class="price">₱280.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">3-piece Santoku Knife</figcaption>
         <p class="price">₱609.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">5in Serrated Utility Knife</figcaption>
         <p class="price">₱175.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">5in Utility Knife w/ Sheath</figcaption>
         <p class="price">₱305.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">Sleek Black Santoku Knife</figcaption>
         <p class="price">₱225.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">5inches Foldable Knife</figcaption>
         <p class="price">₱270.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
