--- a/HTML-VIEW MORE pages/limitedOffer-P3-viewmore.html
+++ b/HTML-VIEW MORE pages/limitedOffer-P3-viewmore.html
@@ -69,7 +69,7 @@
         </figure>
         <figcaption class="productCaption">Set of 10 Stainless Steel Grilling Tools</figcaption>
         <p class="price">₱1,495.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -78,7 +78,7 @@
         </figure>
         <figcaption class="productCaption">Set of 6 Ceramic Rainbow Mugs</figcaption>
         <p class="price">₱679.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -87,7 +87,7 @@
         </figure>
         <figcaption class="productCaption">Minimalist Ceramic Dinnerware Set</figcaption>
         <p class="price">₱1,695.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -96,7 +96,7 @@
         </figure>
         <figcaption class="productCaption">Set of 3 Pastel Purple Plates</figcaption>
         <p class="price">₱435.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
