--- a/HTML-VIEW MORE pages/newArrival-P3-viewmore.html
+++ b/HTML-VIEW MORE pages/newArrival-P3-viewmore.html
@@ -69,7 +69,7 @@
         </figure>
         <figcaption class="productCaption">Colorful Ceramic Dinnerware Set</figcaption>
         <p class="price">₱1,295.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -78,7 +78,7 @@
         </figure>
         <figcaption class="productCaption">Rotary Grater with 3pcs Bowls</figcaption>
         <p class="price">₱1,299.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -87,7 +87,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Gray Cookware Set of 6</figcaption>
         <p class="price">₱1,995.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -96,7 +96,7 @@
         </figure>
         <figcaption class="productCaption">Vintage Kitchen Scale with Stainless Bowl</figcaption>
         <p class="price">₱910.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -105,7 +105,7 @@
         </figure>
         <figcaption class="productCaption">Clear Glass Measuring Cup with Handle</figcaption>
         <p class="price">₱135.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -114,7 +114,7 @@
         </figure>
         <figcaption class="productCaption">Set of 4 Stacked Glass Storage Containers</figcaption>
         <p class="price">₱1,095.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -123,7 +123,7 @@
         </figure>
         <figcaption class="productCaption">White Ceramic Tabletop Set of 10</figcaption>
         <p class="price">₱1,105.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -132,7 +132,7 @@
         </figure>
         <figcaption class="productCaption">One Layer Aluminum Dish Rack</figcaption>
         <p class="price">₱470.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
