--- a/HTML-VIEW MORE pages/utensils-set-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/utensils-set-P2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">Blue-colored Utensil Set with Crock</figcaption>
         <p class="price">₱439.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">Red-colored Utensil Set with Crock</figcaption>
         <p class="price">₱439.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">White-colored Utensil Set with Crock</figcaption>
         <p class="price">₱429.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">Peach-colored Utensil Set with Crock</figcaption>
         <p class="price">₱439.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">7pcs Colorful Kitchen Utensil Set</figcaption>
         <p class="price">₱819.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">5-piece Colorful Kitchen Utensils</figcaption>
         <p class="price">₱529.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">3-piece Colorful Silicone Spatulas</figcaption>
         <p class="price">₱405.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">6-piece Colorful Kitchen Utensil Set</figcaption>
         <p class="price">₱690.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -143,7 +143,7 @@
         </figure>
         <figcaption class="productCaption">Black Modern Kitchen Utensil Set with Holder</figcaption>
         <p class="price">₱565.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +152,7 @@
         </figure>
         <figcaption class="productCaption">17-piece Black Kitchen Utensils Set</figcaption>
         <p class="price">₱1,965.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +161,7 @@
         </figure>
         <figcaption class="productCaption">9-piece Kitchen Tool Set with Wooden Handle</figcaption>
         <p class="price">₱1,549.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +170,7 @@
         </figure>
         <figcaption class="productCaption">5-piece Stainless Steel Utensil Set</figcaption>
         <p class="price">₱979.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
