--- a/HTML-VIEW MORE pages/utensils-spatula&turner-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/utensils-spatula&turner-P2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">5-Piece Green Silicone Spatula Set</figcaption>
         <p class="price">₱486.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">5-Piece Blue Silicone Spatula Set</figcaption>
         <p class="price">₱486.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">5-Piece Red Silicone Spatula Set</figcaption>
         <p class="price">₱486.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">5-Piece Golden Golden-Brown Silicone Spatula Set</figcaption>
         <p class="price">₱486.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">Single Silicone Pesto Spatula</figcaption>
         <p class="price">₱486.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">Single Silicone Blue Spatula</figcaption>
         <p class="price">₱136.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">Single Silicone Red Spatula</figcaption>
         <p class="price">₱136.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">Single Silicone Golden Brown Spatula</figcaption>
         <p class="price">₱136.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -143,7 +143,7 @@
         </figure>
         <figcaption class="productCaption">High Temperature Solid Spatula</figcaption>
         <p class="price">₱136.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +152,7 @@
         </figure>
         <figcaption class="productCaption">Classic Black Nylon Meat Chopper</figcaption>
         <p class="price">₱159.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +161,7 @@
         </figure>
         <figcaption class="productCaption">10in Stainless Steel Fish Turner</figcaption>
         <p class="price">₱189.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +170,7 @@
         </figure>
         <figcaption class="productCaption">Sleek Stainless Steel Lasagna Server</figcaption>
         <p class="price">₱193.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
