--- a/HTML-VIEW MORE pages/bakingtools-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/bakingtools-P2-viewmore.html
@@ -70,7 +70,7 @@
         </figure>
         <figcaption class="productCaption">Decorating Tips and Icing Syringe Set</figcaption>
         <p class="price">₱399.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -79,7 +79,7 @@
         </figure>
         <figcaption class="productCaption">Cake Decorating Tools and Piping Bags</figcaption>
         <p class="price">₱279.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -88,7 +88,7 @@
         </figure>
         <figcaption class="productCaption">Piping Bag and Decorating Tips Set</figcaption>
         <p class="price">₱380.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -97,7 +97,7 @@
         </figure>
         <figcaption class="productCaption">Sculpting Tools with 18 Designs</figcaption>
         <p class="price">₱109.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -106,7 +106,7 @@
         </figure>
         <figcaption class="productCaption">Bread Lame Set with 5 Replacement Blades</figcaption>
         <p class="price">₱175.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -115,7 +115,7 @@
         </figure>
         <figcaption class="productCaption">9inches Shiny Corrugated Aluminum Loaf Pan</figcaption>
         <p class="price">₱105.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -124,7 +124,7 @@
         </figure>
         <figcaption class="productCaption">10inches Black Textured Loaf Pan</figcaption>
         <p class="price">₱125.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -133,7 +133,7 @@
         </figure>
         <figcaption class="productCaption">Assorted Sourdough Bundle</figcaption>
         <p class="price">₱370.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -142,7 +142,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Cake Pan Set of 4</figcaption>
         <p class="price">₱108.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +151,7 @@
         </figure>
         <figcaption class="productCaption">Blue Ceramic Covered Bread Baker</figcaption>
         <p class="price">₱179.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
