--- a/HTML-VIEW MORE pages/bestSeller-P3-viewmore.html
+++ b/HTML-VIEW MORE pages/bestSeller-P3-viewmore.html
@@ -69,7 +69,7 @@
         </figure>
         <figcaption class="productCaption">Set of 3 Golden-Brown Cocottes</figcaption>
         <p class="price">₱1,055.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -78,7 +78,7 @@
         </figure>
         <figcaption class="productCaption">Black Modern Cookware Set of 3</figcaption>
         <p class="price">₱1,359.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -87,7 +87,7 @@
         </figure>
         <figcaption class="productCaption">Grilling Tools in a Sleek Aluminum Case</figcaption>
         <p class="price">₱1,785.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -96,7 +96,7 @@
         </figure>
         <figcaption class="productCaption">Colorful Mini Frying Pan Set of 4</figcaption>
         <p class="price">₱890.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
