--- a/HTML-VIEW MORE pages/bundleDeals-P3-viewmore.html
+++ b/HTML-VIEW MORE pages/bundleDeals-P3-viewmore.html
@@ -69,7 +69,7 @@
         </figure>
         <figcaption class="productCaption">Black Nonstick Cookware Set of 8</figcaption>
         <p class="price">₱1,799.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -78,7 +78,7 @@
         </figure>
         <figcaption class="productCaption">Nonstick Hard Anodized Cookware Set of 7</figcaption>
         <p class="price">₱1,765.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -87,7 +87,7 @@
         </figure>
         <figcaption class="productCaption">Modern Black Cookware Set of 7</figcaption>
         <p class="price">₱2,299.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -96,7 +96,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Turquoise Cookware Set</figcaption>
         <p class="price">₱1,835.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -105,7 +105,7 @@
         </figure>
         <figcaption class="productCaption">8pcs Nonstick Induction Cookware Set</figcaption>
         <p class="price">₱2,559.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -114,7 +114,7 @@
         </figure>
         <figcaption class="productCaption">Stacked Cobalt Blue Dutch Oven with Cover</figcaption>
         <p class="price">₱2,155.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -123,7 +123,7 @@
         </figure>
         <figcaption class="productCaption">Black and Cream Hard Anodized Cookware Set</figcaption>
         <p class="price">₱1,930.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -132,7 +132,7 @@
         </figure>
         <figcaption class="productCaption">3sizes Stainless Steel Frying Pan with Cover</figcaption>
         <p class="price">₱915.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
 
