--- a/HTML-VIEW MORE pages/glasswares-Drinking-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/glasswares-Drinking-P2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">4-piece 16oz. Peach-Striped Glassware Set</figcaption>
         <p class="price">₱279.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">4-piece 16 oz. Red Hearts Drinking Glasses</figcaption>
         <p class="price">₱289.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">4-piece 16oz. Floral Drinking Glassware</figcaption>
         <p class="price">₱280.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">4-piece 16oz. Green Leaf Patterned Drinking Glasses</figcaption>
         <p class="price">₱275.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">6-piece 16oz. Beach Frosted Drinking Glasses</figcaption>
         <p class="price">₱419.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">6-piece 16oz. Floral Frosted Drinking Glasses</figcaption>
         <p class="price">₱429.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">6-piece 16 oz. Purple Frosted Drinking Glasses</figcaption>
         <p class="price">₱405.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">6-piece 16 oz. Geometric Frosted Drinking Glasses</figcaption>
         <p class="price">₱390.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -143,7 +143,7 @@
         </figure>
         <figcaption class="productCaption">1-piece 13oz. Verdant Drinking Glass</figcaption>
         <p class="price">₱58.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +152,7 @@
         </figure>
         <figcaption class="productCaption">1-piece 13oz. Ocean Blue Drinking Glass</figcaption>
         <p class="price">₱65.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +161,7 @@
         </figure>
         <figcaption class="productCaption">1-piece 16oz. Textured Purple Drinking Glass</figcaption>
         <p class="price">₱54.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +170,7 @@
         </figure>
         <figcaption class="productCaption">1-piece 17 oz. Amber Drinking Glass</figcaption>
         <p class="price">₱69.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
