--- a/HTML-VIEW MORE pages/kitchenappliances-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/kitchenappliances-P2-viewmore.html
@@ -70,7 +70,7 @@
         </figure>
         <figcaption class="productCaption">Sleek Matte Black Edition Coffee Grinder</figcaption>
         <p class="price">₱1,479.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -79,7 +79,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Dual Basket Immersion Deep Fryer</figcaption>
         <p class="price">₱3,289.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -88,7 +88,7 @@
         </figure>
         <figcaption class="productCaption">Classic Stainless Steel Toaster Oven</figcaption>
         <p class="price">₱1,280.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -97,7 +97,7 @@
         </figure>
         <figcaption class="productCaption">Black Electric Griddle Latest Model</figcaption>
         <p class="price">₱1,275.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -106,7 +106,7 @@
         </figure>
         <figcaption class="productCaption">Light-weight Double-burner Electric Hot Plate</figcaption>
         <p class="price">₱2,419.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -115,7 +115,7 @@
         </figure>
         <figcaption class="productCaption">Round Black Electric Fryer with Cover</figcaption>
         <p class="price">₱1,229.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -124,7 +124,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Modern Bread Maker</figcaption>
         <p class="price">₱1,505.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -133,7 +133,7 @@
         </figure>
         <figcaption class="productCaption">3cups Quick Cook Rice Cooker</figcaption>
         <p class="price">₱1,390.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -142,7 +142,7 @@
         </figure>
         <figcaption class="productCaption">Heavy Duty Silver Stand Mixer</figcaption>
         <p class="price">₱3,058.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +151,7 @@
         </figure>
         <figcaption class="productCaption">Hand Mixer with Accessories</figcaption>
         <p class="price">₱965.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -160,7 +160,7 @@
         </figure>
         <figcaption class="productCaption">Modern Cast Iron Fondue Set</figcaption>
         <p class="price">₱1,254.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -169,7 +169,7 @@
         </figure>
         <figcaption class="productCaption">Classic Black Medium Waffle Maker</figcaption>
         <p class="price">₱869.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -178,7 +178,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Egg Steamer</figcaption>
         <p class="price">₱1,169.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -187,7 +187,7 @@
         </figure>
         <figcaption class="productCaption">Stainless Steel Digital Toaster</figcaption>
         <p class="price">₱1,969.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
