--- a/HTML-VIEW MORE pages/limitedOffer-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/limitedOffer-P2-viewmore.html
@@ -70,7 +70,7 @@
         </figure>
         <figcaption class="productCaption">2pcs Clear Double-Walled Glass Mugs</figcaption>
         <p class="price">₱329.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -79,7 +79,7 @@
         </figure>
         <figcaption class="productCaption">4pcs Golden Brown Ceramic Mugs</figcaption>
         <p class="price">₱540.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -88,7 +88,7 @@
         </figure>
         <figcaption class="productCaption">Pastel Ceramic Mixing Bowls Set of 5</figcaption>
         <p class="price">₱346.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -97,7 +97,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Cream-Colored Dinnerware Display</figcaption>
         <p class="price">₱277.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -106,7 +106,7 @@
         </figure>
         <figcaption class="productCaption">Set of 3 Geometric Design Dishware</figcaption>
         <p class="price">₱290.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -115,7 +115,7 @@
         </figure>
         <figcaption class="productCaption">Elegant Light Red Dinnerware Set</figcaption>
         <p class="price">₱528.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -124,7 +124,7 @@
         </figure>
         <figcaption class="productCaption">Minimalist three-tiered Serving Platter Set</figcaption>
         <p class="price">₱975.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -133,7 +133,7 @@
         </figure>
         <figcaption class="productCaption">Plastic Food Keeper with Cover</figcaption>
         <p class="price">₱210.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -142,7 +142,7 @@
         </figure>
         <figcaption class="productCaption">3pcs Light Green Ceramic Baking Dishes</figcaption>
         <p class="price">₱885.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -151,7 +151,7 @@
         </figure>
         <figcaption class="productCaption">Set of 6 Blue Crystal Glasses</figcaption>
         <p class="price">₱699.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
