--- a/HTML-VIEW MORE pages/utensils-SPL-P2-viewmore.html
+++ b/HTML-VIEW MORE pages/utensils-SPL-P2-viewmore.html
@@ -71,7 +71,7 @@
         </figure>
         <figcaption class="productCaption">5-piece Stainless Steel Flatware Set</figcaption>
         <p class="price">₱409.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -80,7 +80,7 @@
         </figure>
         <figcaption class="productCaption">1 Set of Stainless Steel Spoon, Fork and Knife</figcaption>
         <p class="price">₱389.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -89,7 +89,7 @@
         </figure>
         <figcaption class="productCaption">3-piece Stainless Steel Spoon and Fork Set</figcaption>
         <p class="price">₱370.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -98,7 +98,7 @@
         </figure>
         <figcaption class="productCaption">1Pair Elegant Stainless Steel Spoon and Fork</figcaption>
         <p class="price">₱239.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -107,7 +107,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Slotted Spoon with Black Plastic Handle</figcaption>
         <p class="price">₱119.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -116,7 +116,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Stainless Steel Polished Ladle</figcaption>
         <p class="price">₱179.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -125,7 +125,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Sleek Stainless Steel Pasta Server</figcaption>
         <p class="price">₱205.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -134,7 +134,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Gray Angled Mixing Spoon</figcaption>
         <p class="price">₱190.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -143,7 +143,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Multi-Purpose Silicone Spoon</figcaption>
         <p class="price">₱165.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -152,7 +152,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Modern Black Soup Ladle</figcaption>
         <p class="price">₱159.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -161,7 +161,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Silicone Ladle with Wooden Handle</figcaption>
         <p class="price">₱149.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 
     <div class="eachProduct">
@@ -170,7 +170,7 @@
         </figure>
         <figcaption class="productCaption">1-piece Matte Black Slotted Spoon</figcaption>
         <p class="price">₱179.00</p>
-        <button id="addToCart">Add to Cart</button>
+        <button id="addToCart" class="addToCart">Add to Cart</button>
     </div>
 </div>
 
